--- a/sndr-ui/Makefile
+++ b/sndr-ui/Makefile
@@ -1,5 +1,5 @@
 test: aufeat
-	./aufeat
+	./aufeat 80s.wav
 
 aufeat: aufeat.cpp aquat.h aufeat.h optparse.h wavfile.h
 	g++ -g -O0 -Wall -D__CHECK -I.. aufeat.cpp -lfftw3 -o $@
