--- a/sndr-tools/Makefile
+++ b/sndr-tools/Makefile
@@ -3,7 +3,7 @@ CXX= g++
 #CXX = icpc
 
 # flags
-CXXFLAGS = -g -pedantic -Wall -D__NO_RAND_SEED
+CXXFLAGS = -I.. -pedantic -Wall -D__NO_RAND_SEED
 ifeq ($(CXX),icpc)
 	CXXFLAGS += -xHOST -O3 -ip -no-prec-div -mdynamic-no-pic -openmp -openmp-report0 -vec-report0 -fno-alias
 else
@@ -32,10 +32,10 @@ all: $(BIN)/snd_track $(BIN)/sndr
 $(BIN):
 	mkdir $(BIN)
 
-$(BIN)/snd_track: $(SRC)/snd_track.cpp $(SRC)/aufeat.h $(SRC)/gmm.h $(SRC)/hmm.h $(SRC)/array.h $(SRC)/intransp.h $(SRC)/aquat.h $(SRC)/optparse.h $(SRC)/wavfile.h
+$(BIN)/snd_track: $(SRC)/snd_track.cpp $(SRC)/../../aufeat.h $(SRC)/gmm.h $(SRC)/hmm.h $(SRC)/../../array.h $(SRC)/intransp.h $(SRC)/aquat.h $(SRC)/optparse.h $(SRC)/wavfile.h
 	$(CXX) $(SRC)/snd_track.cpp $(CXXFLAGS) $(LDFLAGS) -o $(BIN)/snd_track
 
-$(BIN)/sndr: $(SRC)/sndr.cpp $(SRC)/sndr.h $(SRC)/aufeat.h $(SRC)/gmm.h $(SRC)/hmm.h $(SRC)/array.h $(SRC)/intransp.h $(SRC)/aquat.h $(SRC)/optparse.h $(SRC)/wavfile.h
+$(BIN)/sndr: $(SRC)/sndr.cpp $(SRC)/sndr.h $(SRC)/../../aufeat.h $(SRC)/gmm.h $(SRC)/hmm.h $(SRC)/../../array.h $(SRC)/intransp.h $(SRC)/aquat.h $(SRC)/optparse.h $(SRC)/wavfile.h
 	$(CXX) $(SRC)/sndr.cpp $(CXXFLAGS) $(LDFLAGS) -o $(BIN)/sndr
 
 clean:
