--- a/sndr-tools/Makefile
+++ b/sndr-tools/Makefile
@@ -1,7 +1,5 @@
-# Compiler
 CXX= g++ # icpc
 
-# Flags.  Don't define -ffast-math, because that breaks isnan().
 CXXFLAGS = -O3 -I.. -std=c++0x
 CXXFLAGS += -D__NO_RAND_SEED
 ifeq ($(CXX),icpc)
@@ -13,6 +11,7 @@ endif
 #CXXFLAGS += -g -O0
 #CXXFLAGS += -D__CHECK
 LDFLAGS = -lfftw3
+# Omit -ffast-math, because it breaks isnan().
 
 # Use float precision (not recommended)
 # CXXFLAGS += -D__FLOAT
@@ -20,26 +19,19 @@ LDFLAGS = -lfftw3
 # Make HMM speaker models
 CXXFLAGS += -D__HMM_TRAIN
 
-# Directories
+
 BIN = bin
 SRC = src
 SRC_H = $(SRC)/../..
-
-# Rules
-
-all: $(BIN)/snd_track $(BIN)/sndr
-
-$(BIN):
-	mkdir $(BIN)
-
 H = $(SRC)/ann.h $(SRC)/gmm.h $(SRC)/hmm.h $(SRC)/intransp.h $(SRC)/logadd.h $(SRC)/real_t.h $(SRC)/state.h \
     $(SRC_H)/array.h $(SRC_H)/aufeat.h $(SRC_H)/optparse.h $(SRC_H)/wavfile.h
 
-$(BIN)/snd_track: $(SRC)/snd_track.cpp $(H) Makefile
+all: $(BIN)/snd_track $(BIN)/sndr
+$(BIN):
+	mkdir $(BIN)
+$(BIN)/snd_track: $(BIN) $(SRC)/snd_track.cpp $(H) Makefile
 	$(CXX) $(SRC)/snd_track.cpp $(CXXFLAGS) $(LDFLAGS) -o $(BIN)/snd_track
-
-$(BIN)/sndr: $(SRC)/sndr.cpp $(SRC)/sndr.h $(H) Makefile
+$(BIN)/sndr: $(BIN) $(SRC)/sndr.cpp $(SRC)/sndr.h $(H) Makefile
 	$(CXX) $(SRC)/sndr.cpp $(CXXFLAGS) $(LDFLAGS) -o $(BIN)/sndr
-
 clean:
 	-rm -rf $(BIN)/*
