incomplete test case: two sinusoids

--- a/sndr-tools/Makefile
+++ b/sndr-tools/Makefile
@@ -16,16 +16,19 @@ LDFLAGS = -lfftw3
 # Use float precision (not recommended)
 # CXXFLAGS += -D__FLOAT
 
-# Make HMM speaker models
+# Make HMM not GMM speaker models
 CXXFLAGS += -D__HMM_TRAIN
 
 
+TST = tests
 BIN = bin
 SRC = src
 SRC_H = $(SRC)/../..
 H = $(SRC)/ann.h $(SRC)/gmm.h $(SRC)/hmm.h $(SRC)/intransp.h $(SRC)/logadd.h $(SRC)/real_t.h $(SRC)/state.h \
     $(SRC_H)/array.h $(SRC_H)/aufeat.h $(SRC_H)/optparse.h $(SRC_H)/wavfile.h
 
+test: $(BIN)/sndr $(TST)/sines.rb
+	 $(TST)/sines.rb
 all: $(BIN)/snd_track $(BIN)/sndr
 $(BIN):
 	mkdir $(BIN)
